--- a/test/Altinn.App.PlatformServices.Tests/Altinn.App.PlatformServices.Tests.csproj
+++ b/test/Altinn.App.PlatformServices.Tests/Altinn.App.PlatformServices.Tests.csproj
@@ -26,7 +26,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Altinn.App.PlatformServices\Altinn.App.PlatformServices.csproj" />
+    <ProjectReference Include="..\..\src\Altinn.App.PlatformServices\Altinn.App.PlatformServices.csproj" />
   </ItemGroup>
 
   <ItemGroup Condition="'$(Configuration)'=='Debug'">
