--- a/.github/workflows/test-and-analyze-fork.yml
+++ b/.github/workflows/test-and-analyze-fork.yml
@@ -20,10 +20,10 @@ jobs:
           fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
 
       - name: dotnet build
-        run: dotnet build src/AppRef.sln -v m
+        run: dotnet build AppLibDotnet.sln -v m
 
       - name: dotnet test
-        run: dotnet test src/AppRef.sln --results-directory TestResults/ --collect:"XPlat Code Coverage" -v m
+        run: dotnet test AppLibDotnet.sln --results-directory TestResults/ --collect:"XPlat Code Coverage" -v m
 
       - name: Generate coverage results
         run: |
