include dotnet5 in release workflow

--- a/.github/workflows/publish-release.yml
+++ b/.github/workflows/publish-release.yml
@@ -16,7 +16,9 @@ jobs:
       - name: Install dotnet6
         uses: actions/setup-dotnet@v2
         with:
-          dotnet-version: 6.0.x
+          dotnet-version: |
+            5.0.x
+            6.0.x
       - name: Install deps
         run: |
           dotnet restore
