--- a/Altinn.App.Core/Altinn.App.Core.csproj
+++ b/Altinn.App.Core/Altinn.App.Core.csproj
@@ -37,7 +37,7 @@
     <PackageReference Include="Altinn.Platform.Storage.Interface" Version="3.11.0" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.43" />
     <PackageReference Include="JWTCookieAuthentication" Version="2.4.2" />
-    <PackageReference Include="Microsoft.ApplicationInsights" Version="2.20.0" />
+    <PackageReference Include="Microsoft.ApplicationInsights.AspNetCore" Version="2.20.0" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Client" Version="5.2.9" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Scrutor" Version="4.2.0" />
