--- a/src/Altinn.App.Core/Altinn.App.Core.csproj
+++ b/src/Altinn.App.Core/Altinn.App.Core.csproj
@@ -20,4 +20,7 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Scrutor" Version="4.2.0" />
   </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Decorators\" />
+  </ItemGroup>
 </Project>
