--- a/.gitignore
+++ b/.gitignore
@@ -372,6 +372,6 @@ nbactions.xml
 nb-configuration.xml
 
 ## IntelliJ
-.idea
+.idea/
 src/Altinn.Apps/AppTemplates/AspNet/App/Properties/launchSettings.json
 *.iml
