--- a/test/Altinn.App.Api.Tests/Altinn.App.Api.Tests.csproj
+++ b/test/Altinn.App.Api.Tests/Altinn.App.Api.Tests.csproj
@@ -24,7 +24,15 @@
     </ItemGroup>
 
     <ItemGroup>
-      <ProjectReference Include="..\..\src\Altinn.App.Api\Altinn.App.Api.csproj" />
+        <ProjectReference Include="..\..\src\Altinn.App.Api\Altinn.App.Api.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <None Include="TestResources/**">
+            <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+            <LinkBase>/</LinkBase>
+            <Link>/%(RecursiveDir)%(Filename)%(Extension)</Link>
+        </None>
     </ItemGroup>
 
 </Project>
