--- a/test/Altinn.App.Core.Tests/Altinn.App.Core.Tests.csproj
+++ b/test/Altinn.App.Core.Tests/Altinn.App.Core.Tests.csproj
@@ -10,6 +10,8 @@
 
   <ItemGroup>
     <Compile Remove="Implementation\AppBaseTests.cs" />
+    <Content Include="LayoutExpressions/**/*.json" CopyToOutputDirectory="Always" CopyToPublishDirectory="Always" />
+    <Watch Include="LayoutExpressions/**/*.json"/>
   </ItemGroup>
 
   <ItemGroup>
