--- a/test/Altinn.App.Core.Tests/Altinn.App.Core.Tests.csproj
+++ b/test/Altinn.App.Core.Tests/Altinn.App.Core.Tests.csproj
@@ -42,6 +42,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Content Include="Helpers\TestData\simple-gateway.bpmn">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Internal\Pdf\TestData\**">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
