--- a/test/Altinn.App.Api.Tests/Altinn.App.Api.Tests.csproj
+++ b/test/Altinn.App.Api.Tests/Altinn.App.Api.Tests.csproj
@@ -9,7 +9,8 @@
 
     <ItemGroup>
         <PackageReference Include="FluentAssertions" Version="6.7.0" />
-        <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="6.0.9" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.10" />
+        <PackageReference Include="Microsoft.AspNetCore.TestHost" Version="6.0.10" />
         <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.2" />
         <PackageReference Include="Moq" Version="4.18.2" />
         <PackageReference Include="xunit" Version="2.4.2" />
@@ -33,6 +34,15 @@
             <LinkBase>/</LinkBase>
             <Link>/%(RecursiveDir)%(Filename)%(Extension)</Link>
         </None>
+    </ItemGroup>
+
+    <ItemGroup>
+      <None Update="jwtselfsignedcert.pfx">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
+      <None Update="JWTValidationCert.cer">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
 </Project>
