Add new method on IAppResources to get LayoutModel
Also call sub JsonConvert classes directly to get location information
when parsing fails.

--- a/src/Altinn.App.Core/Altinn.App.Core.csproj
+++ b/src/Altinn.App.Core/Altinn.App.Core.csproj
@@ -21,7 +21,9 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Scrutor" Version="4.2.0" />
   </ItemGroup>
+
   <ItemGroup>
     <Folder Include="Features\Events\" />
+    <InternalsVisibleTo Include="$(AssemblyName).Tests" />
   </ItemGroup>
 </Project>
