Fix lots of CodeSmels from SonarCloud + simple review comments
Also added ImplicitUsings to Altinn.App.Core.Tests.csproj to match Altinn.App.Core.csproj

--- a/test/Altinn.App.Core.Tests/Altinn.App.Core.Tests.csproj
+++ b/test/Altinn.App.Core.Tests/Altinn.App.Core.Tests.csproj
@@ -6,6 +6,7 @@
     <IsPackable>false</IsPackable>
 
     <RootNamespace>Altinn.App.PlatformServices.Tests</RootNamespace>
+    <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
