--- a/.github/release.yml
+++ b/.github/release.yml
@@ -5,16 +5,19 @@ changelog:
   categories:
     - title: Breaking Changes 🛠
       labels:
-        - Semver-Major
+        - semver-major
         - breaking-change
     - title: New Features 🎉
       labels:
-        - Semver-Minor
-        - enhancement
+        - semver-minor
+        - feature
     - title: Bugfixes 🐛
       labels:
-        - Semver-patch
+        - semver-patch
         - bugfix
+    - title: Dependency Upgrades 📦
+      labels:
+        - dependency
     - title: Other Changes
       labels:
         - "*"
