Add more tests for DataModel to improve test coverage (and fix bug)

--- a/test/Altinn.App.Core.Tests/Altinn.App.Core.Tests.csproj
+++ b/test/Altinn.App.Core.Tests/Altinn.App.Core.Tests.csproj
@@ -13,6 +13,7 @@
     <Compile Remove="Implementation\AppBaseTests.cs" />
     <Content Include="LayoutExpressions/**/*.json" CopyToOutputDirectory="Always" CopyToPublishDirectory="Always" />
     <Watch Include="LayoutExpressions/**/*.json"/>
+    <Watch Include="**/*.cs"/>
   </ItemGroup>
 
   <ItemGroup>
