--- a/cli-tools/altinn-app-cli/altinn-app-cli.csproj
+++ b/cli-tools/altinn-app-cli/altinn-app-cli.csproj
@@ -28,7 +28,7 @@
   </ItemGroup>
   <PropertyGroup>
     <RepoRoot>$([System.IO.Directory]::GetParent($(MSBuildThisFileDirectory)).Parent.FullName)</RepoRoot>
-    <MinVerDefaultPreReleasePhase>preview</MinVerDefaultPreReleasePhase>
+    <MinVerDefaultPreReleaseIdentifiers>preview.0</MinVerDefaultPreReleaseIdentifiers>
     <MinVerTagPrefix>altinn-app-cli</MinVerTagPrefix>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <LangVersion>10.0</LangVersion>
