--- a/test/Altinn.App.Api.Tests/Altinn.App.Api.Tests.csproj
+++ b/test/Altinn.App.Api.Tests/Altinn.App.Api.Tests.csproj
@@ -5,6 +5,11 @@
 		<Nullable>enable</Nullable>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<IsPackable>false</IsPackable>
+		<NoWarn>$(NoWarn);CS1591;CS0618</NoWarn>
+		<!--
+			CS1591: Don't warn for missing XML doc
+			CS0618: This is a test project, so we usually continue testing [Obsolete] apis
+		-->
 	</PropertyGroup>
 
 	<ItemGroup>
