Add tests for MultiDecisionHelper and add xml comments

--- a/test/Altinn.App.Core.Tests/Altinn.App.Core.Tests.csproj
+++ b/test/Altinn.App.Core.Tests/Altinn.App.Core.Tests.csproj
@@ -71,7 +71,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="Helpers\TestData\simple-gateway.bpmn">
+    <Content Include="Helpers\TestData\**">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
     <Content Include="Internal\Pdf\TestData\**">
