--- a/test/Altinn.App.Core.Tests/Altinn.App.Core.Tests.csproj
+++ b/test/Altinn.App.Core.Tests/Altinn.App.Core.Tests.csproj
@@ -74,6 +74,9 @@
     <Content Include="Helpers\TestData\**">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
+    <Content Include="Infrastructure\Clients\Authorization\TestData\**">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </Content>
     <Content Include="Internal\Pdf\TestData\**">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </Content>
