Add JsonEquivalentTo utility for fluent assertions
See https://github.com/fluentassertions/fluentassertions/pull/2493

--- a/test/Altinn.App.Api.Tests/Altinn.App.Api.Tests.csproj
+++ b/test/Altinn.App.Api.Tests/Altinn.App.Api.Tests.csproj
@@ -31,6 +31,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\..\src\Altinn.App.Api\Altinn.App.Api.csproj" />
+		<ProjectReference Include="..\Altinn.App.TestUtils\Altinn.App.TestUtils.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
