--- a/test/Altinn.App.Api.Tests/Data/Instances/tdd/contributer-restriction/.gitignore
+++ b/test/Altinn.App.Api.Tests/Data/Instances/tdd/contributer-restriction/.gitignore
@@ -1,6 +1,4 @@
-#Ignore all blob files named with a guid for the dataElementId
-????????-????-????-????-????????????
-# Ignore json files
-*.json
-# Except those that ends in .pretest.json
-!*.pretest.json
+# Ignore guid.json files
+????????-????-????-????-????????????.json
+# ignore copied blobs
+*/*/blob/????????-????-????-????-????????????
