--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,8 @@
 ###############################################################################
 * text=auto
 
+*.cs text eol=crlf
+
 ###############################################################################
 # Set default behavior for command prompt diff.
 #
