Configure renovate to issue dependency updates to both main and v7.

--- a/renovate.json
+++ b/renovate.json
@@ -3,5 +3,6 @@
   "extends": [
     "local>Altinn/renovate-config"
   ],
-  "labels": ["dependency"]
+  "labels": ["dependency"],
+  "baseBranches": ["main", "v7"]
 }
