feat: add wiring of email service

--- a/test/Altinn.App.Core.Tests/Altinn.App.Core.Tests.csproj
+++ b/test/Altinn.App.Core.Tests/Altinn.App.Core.Tests.csproj
@@ -97,6 +97,7 @@
 
   <ItemGroup>
     <Watch Remove="Extensions\DictionaryExtensionsTests.cs" />
+    <Watch Remove="Infrastructure\Clients\Email\EmailNotificationClientTests.cs" />
     <Watch Remove="Internal\Pdf\PdfServiceTests.cs" />
     <Watch Remove="Mocks\RequestInterceptor.cs" />
   </ItemGroup>
