replace main with v7 for workflows in v7 support branch. disable sonar for renovate prs

--- a/.github/workflows/dotnet-test.yml
+++ b/.github/workflows/dotnet-test.yml
@@ -1,9 +1,11 @@
 name: Build and Test on windows, macos and ubuntu
 on:
   push:
-    branches: [ main ]
+    branches: 
+      - v7
   pull_request:
-    branches: [ main ]
+    branches: 
+      - v7
     types: [opened, synchronize, reopened]
   workflow_dispatch:
 jobs:
