--- a/.github/workflows/test-and-analyze.yml
+++ b/.github/workflows/test-and-analyze.yml
@@ -1,14 +1,17 @@
 name: Code test and analysis
 on:
   push:
-    branches: [ main ]
+    branches: 
+      - v7
   pull_request:
-    branches: [ main ]
+    branches: 
+      - v7
     types: [opened, synchronize, reopened]
   workflow_dispatch:
 jobs:
   analyze:
     if: |
+     github.event.pull_request.user.login != 'renovate[bot]' &&
      github.repository_owner == 'Altinn' &&
      (github.event_name != 'pull_request' && github.event.repository.fork == false) ||
      (github.event_name == 'pull_request' && github.event.pull_request.head.repo.fork == false)
