--- a/.github/workflows/test-and-analyze-fork.yml
+++ b/.github/workflows/test-and-analyze-fork.yml
@@ -1,7 +1,8 @@
 name: Code test and analysis (fork)
 on:
   pull_request:
-    branches: [ main ]
+    branches: 
+      - v7
     types: [opened, synchronize, reopened, ready_for_review]
 jobs:
   test:
