--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,3 +1,3 @@
-# Add 'triage' label to all new issues
-'status/triage':
+# Temporarily adds a label without special characters for debug
+bugfix:
   - '/.*/'
