--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,3 +1,3 @@
-# Temporarily adds a label without special characters for debug
-bugfix:
+# Add 'triage' label to all new issues
+'status/triage':
   - '/.*/'
