--- a/test/Altinn.App.Api.Tests/Altinn.App.Api.Tests.csproj
+++ b/test/Altinn.App.Api.Tests/Altinn.App.Api.Tests.csproj
@@ -9,6 +9,7 @@
 		<!--
 			CS1591: Don't warn for missing XML doc
 			CS0618: This is a test project, so we usually continue testing [Obsolete] apis
+            CS7022: The entry point of the program is global code; ignoring 'Program.Main(string[])' entry point
 		-->
 	</PropertyGroup>
 
