--- a/.github/workflows/dotnet-test.yml
+++ b/.github/workflows/dotnet-test.yml
@@ -12,11 +12,12 @@ jobs:
   analyze:
     strategy:
       matrix:
-        os: [macos-latest,windows-latest,ubuntu-latest] # TODO: Fix test to run on ubuntu-latest also
+        os: [macos-latest, windows-latest, ubuntu-latest]
     name: Run dotnet build and test
     runs-on: ${{ matrix.os}}
-    env: 
+    env:
       DOTNET_HOSTBUILDER__RELOADCONFIGONCHANGE: false
+      DOTNET_TREATWARNINGSASERRORS: true
     steps:
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
@@ -25,10 +26,10 @@ jobs:
             8.0.x
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
+          fetch-depth: 0 # Shallow clones should be disabled for a better relevancy of analysis
       - name: Build
         run: |
-           dotnet build AppLibDotnet.sln -v m
+          dotnet build AppLibDotnet.sln -v m
       - name: Test
         run: |
-           dotnet test AppLibDotnet.sln -v m
+              dotnet test AppLibDotnet.sln -v m --no-build
