--- a/.editorconfig
+++ b/.editorconfig
@@ -102,6 +102,9 @@ dotnet_diagnostic.CA2254.severity = none
 # CA1822: Mark members as static
 dotnet_diagnostic.CA1822.severity = suggestion
 
+# IDE0080: Remove unnecessary suppression operator
+dotnet_diagnostic.IDE0080.severity = error
+
 [Program.cs]
 dotnet_diagnostic.CA1050.severity = none
 dotnet_diagnostic.S1118.severity = none
