Green build for 'minimum' analysismode for builtin roslyn analyzers

--- a/Directory.Build.props
+++ b/Directory.Build.props
@@ -5,6 +5,10 @@
 
     <PropertyGroup>
         <LangVersion>latest</LangVersion>
+        <EnableNETAnalyzers>true</EnableNETAnalyzers>
+        <AnalysisMode>Minimum</AnalysisMode>
+        <Features>strict</Features>
+        <!-- <CodeAnalysisTreatWarningsAsErrors>false</CodeAnalysisTreatWarningsAsErrors> -->
     </PropertyGroup>
 
     <ItemGroup>
