--- a/.editorconfig
+++ b/.editorconfig
@@ -10,6 +10,14 @@ indent_style = space
 indent_size = 4
 max_line_length = 120
 
+# XML project files
+[*.{csproj,vbproj,vcxproj,vcxproj.filters,proj,projitems,shproj}]
+indent_size = 2
+
+# XML config files
+[*.{props,targets,ruleset,config,nuspec,resx,vsixmanifest,vsct}]
+indent_size = 2
+
 [*.{cs,vb}]
 dotnet_sort_system_directives_first = true
 dotnet_separate_import_directive_groups = false
